--- a/teacher_assistant/templates/components/navbar.html
+++ b/teacher_assistant/templates/components/navbar.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link {% if active == 'home' %}active{% endif %}" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'user:index' %}">Teachers</a>
+          <a class="nav-link {% if active == 'teachers' %}active{% endif %}" href="{% url 'user:index' %}">Teachers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin" target='_blank'>Admin</a>
+          <a class="nav-link" href="{% url 'admin:index' %}" target='_blank'>Admin</a>
         </li>
       </ul>
 
