--- a/teacher_assistant/user/templates/user/index.html
+++ b/teacher_assistant/user/templates/user/index.html
@@ -1,22 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Teacher</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
-</head>
-<body>
-{% include 'components/navbar.html' %}
+{% extends 'base.html' %}
 
+{% block main %}
 <h1> Hello Teacher in user/index !</h1>
 <ul>
   {% for k, v in user.items%}
   <li> {{k}}: {{v.age}}</li>
   {% endfor %}
 </ul>
-</body>
-</html>
+{% endblock %}
+
+{% block menu %}
+    {% with active='teachers' %}
+    {{ block.super }}
+    {% endwith %}
+{% endblock %}
