created models for teacher and studens

--- a/teacher_assistant/templates/components/navbar.html
+++ b/teacher_assistant/templates/components/navbar.html
@@ -14,7 +14,7 @@
           <a class="nav-link" href="{% url 'user:index' %}">Teachers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin" target='_blank'>Admin</a>
+          <a class="nav-link" href="{% url 'admin:index' %}" target='_blank'>Admin</a>
         </li>
       </ul>
 
