--- a/teacher_assistant/templates/components/navbar.html
+++ b/teacher_assistant/templates/components/navbar.html
@@ -14,6 +14,9 @@
           <a class="nav-link" href="{% url 'user:index' %}">Teachers</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'lessons:index' %}">Lessons</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'admin:index' %}" target='_blank'>Admin</a>
         </li>
       </ul>
